objects/QA_Test1__c.object
<CustomObject>
    <description>Add Comment</description>
    <fields>
        <fullName>AccSField1__c</fullName>
        <label>AccSField1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom1__c</fullName>
        <description>Testing translations</description>
        <label>Custom1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PAccObj1__c</fullName>
        <description>Add PAccObj1</description>
        <label>PAccObj1</label>
        <type>Phone</type>
    </fields>
    <label>QA Test1</label>
    <nameField>
        <label>QA Test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QATests1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>